--- a/.sops.yaml
+++ b/.sops.yaml
@@ -19,8 +19,12 @@ creation_rules:
         - *maul_alex
         - *maul_server
   - path_regex: hosts/aeneas/[^/]+\.(yaml|json|env|ini)$
+    key_groups:
+      - age:
         - *aeneas_alex
         - *achilles_alex
   - path_regex: hosts/achilles/[^/]+\.(yaml|json|env|ini)$
+    key_groups:
+      - age:
         - *aeneas_alex
         - *achilles_alex
